--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite --port 1212",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "publish": "vue-tsc && vite build && cd dist && git init && git branch -m build && git add -A && git commit -m 'build' && git push https://github.com/AirOne-dev/mac-vite.git build:build --force"
   },
   "dependencies": {
     "vue": "^3.2.47",
