fix assets build

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "publish": "npm run build && echo \"[Live demo](https://airone-dev.github.io/mac-vite/)\" > dist/README.md && cd dist && git init && git branch -m build && git add -A && git commit -m 'build' && git push https://github.com/AirOne-dev/mac-vite.git build:build --force"
   },
   "dependencies": {
+    "vite-plugin-static-copy": "^0.16.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.1"
   },
